Fix Spacing between sections

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -110,6 +110,7 @@ header {
     letter-spacing: 0.8px;
     box-shadow: 6px 5px 8px rgba(142, 135, 135, 0.1);
 }
+
 .section-title {
     color: #2bbdb9;
     font-size: 22px;
@@ -125,7 +126,9 @@ header {
 .section .row {
     padding: 20px 18px;
 }
-
+.section-sub .row{
+    padding: 20px 0px;
+}
 .form-control::placeholder {
     color: #444;
     opacity: 0.5;
@@ -530,4 +533,24 @@ input:checked + .slider:before {
 
 .pos-header{
    background-color: #5c8bab;
+}
+
+/***** Product Search dropdown ********/
+.product-dropdown{
+    background-color: white;
+    width: 90%;
+    margin-left: 59px;
+    margin-top: 5px;
+    position: absolute;
+    height: 60%;
+    border: 3px solid;
+    border-color: #80bdff;
+
+}
+
+.pr-code{
+    text-align: left;
+}
+.pr-price{
+    text-align: right;
 }
